[gd_scene load_steps=15 format=3 uid="uid://blglugajiqw3y"]

[ext_resource type="Script" uid="uid://cjmw0hmqq8fmc" path="res://menus/main_menu/top_btns.gd" id="1_1nwmw"]
[ext_resource type="Script" uid="uid://bpk3x06ssbpm7" path="res://menus/main_menu/main_menu.gd" id="1_ml8bw"]
[ext_resource type="Script" uid="uid://c146knvqhpoml" path="res://menus/main_menu/bottom_btns.gd" id="1_xbn2l"]
[ext_resource type="Script" uid="uid://bub4ffpv8tcbw" path="res://menus/main_menu/new_game_pan.gd" id="3_vu5tu"]
[ext_resource type="Script" uid="uid://b6n8qhhhlm8ns" path="res://menus/main_menu/settings_pan.gd" id="5_er5qh"]
[ext_resource type="Texture2D" uid="uid://c5pc6hoik0e1v" path="res://sprites/images/main_menu_01.png" id="5_oic2i"]
[ext_resource type="Script" uid="uid://bq1g5ht65oheh" path="res://menus/main_menu/rules_pan.gd" id="6_f7ts8"]
[ext_resource type="Texture2D" uid="uid://dp05tqo7p4o03" path="res://rulebook/rule_1.png" id="7_81su3"]
[ext_resource type="Texture2D" uid="uid://h3wnxx4suwy" path="res://rulebook/rule_2.png" id="8_d1j5c"]
[ext_resource type="PackedScene" uid="uid://u8n28ml7weyi" path="res://rulebook/cross.tscn" id="9_pmi7g"]
[ext_resource type="PackedScene" uid="uid://fv1fk5ro8xmt" path="res://rulebook/arrow.tscn" id="10_sk04l"]
[ext_resource type="Texture2D" uid="uid://coar21qa72561" path="res://rulebook/rule_3.png" id="11_pmi7g"]
[ext_resource type="Texture2D" uid="uid://bl7qw12331oqi" path="res://rulebook/rule_4.png" id="12_sk04l"]
[ext_resource type="Texture2D" uid="uid://bqnmfgehdm1bj" path="res://sprites/images/europe_map.png" id="13_11cdn"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_ml8bw")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="main_container" type="PanelContainer" parent="."]
offset_left = 48.0
offset_top = -224.0
offset_right = 352.0
offset_bottom = 220.0

[node name="top_buttons" type="Control" parent="main_container"]
layout_mode = 2

[node name="top_btns" type="VBoxContainer" parent="main_container/top_buttons"]
layout_mode = 2
offset_left = 16.0
offset_top = 24.0
offset_right = 288.0
offset_bottom = 96.0
script = ExtResource("1_1nwmw")

[node name="continue_btn" type="Button" parent="main_container/top_buttons/top_btns"]
visible = false
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Continue"

[node name="new_game_btn" type="Button" parent="main_container/top_buttons/top_btns"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "New game"

[node name="campaign_btn" type="Button" parent="main_container/top_buttons/top_btns"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Campaign"

[node name="bottom_btns" type="VBoxContainer" parent="main_container/top_buttons"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -88.0
offset_right = -16.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_xbn2l")

[node name="game_rules_btn" type="Button" parent="main_container/top_buttons/bottom_btns"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Game Rule"

[node name="settings_btn" type="Button" parent="main_container/top_buttons/bottom_btns"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Settings"

[node name="exit_btn" type="Button" parent="main_container/top_buttons/bottom_btns"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Exit"

[node name="othr_containers" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="new_game_pan" type="Panel" parent="othr_containers"]
visible = false
layout_mode = 0
offset_left = -312.0
offset_top = -136.0
offset_bottom = 136.0
script = ExtResource("3_vu5tu")

[node name="game_rules_btn" type="OptionButton" parent="othr_containers/new_game_pan"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -296.0
offset_top = -112.0
offset_right = -16.0
offset_bottom = -62.0
grow_horizontal = 0
grow_vertical = 2
selected = 0
item_count = 3
popup/item_0/text = "Basic Rules"
popup/item_0/id = 0
popup/item_1/text = "Basic PLUS Rules"
popup/item_1/id = 1
popup/item_2/text = "XXI"
popup/item_2/id = 2

[node name="game_type_btn" type="OptionButton" parent="othr_containers/new_game_pan"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -296.0
offset_top = -56.0
offset_right = -16.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 2
selected = 0
item_count = 2
popup/item_0/text = "Player VS Player"
popup/item_0/id = 0
popup/item_1/text = "Player VS AI"
popup/item_1/id = 1

[node name="ai_lvl_btn" type="OptionButton" parent="othr_containers/new_game_pan"]
visible = false
custom_minimum_size = Vector2(0, 50)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 16.0
offset_top = -10.0
offset_right = -144.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
selected = 0
item_count = 2
popup/item_0/text = "Easy"
popup/item_0/id = 0
popup/item_1/text = "Normal"
popup/item_1/id = 1

[node name="start_g_btn" type="Button" parent="othr_containers/new_game_pan"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
offset_left = 16.0
offset_top = 208.0
offset_right = 296.0
offset_bottom = 258.0
text = "Start Game"

[node name="settings_pan" type="Panel" parent="othr_containers"]
visible = false
layout_mode = 0
offset_left = -360.0
offset_top = -144.0
offset_right = -16.0
offset_bottom = 136.0
script = ExtResource("5_er5qh")

[node name="GridContainer" type="GridContainer" parent="othr_containers/settings_pan"]
layout_mode = 0
offset_left = 16.0
offset_top = 40.0
offset_right = 320.0
offset_bottom = 192.0
columns = 2

[node name="animation_lbl" type="Label" parent="othr_containers/settings_pan/GridContainer"]
layout_mode = 2
text = "Animation"

[node name="animation_btn" type="OptionButton" parent="othr_containers/settings_pan/GridContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "On"
popup/item_0/id = 1
popup/item_1/text = "Off"
popup/item_1/id = 0

[node name="movement_lbl" type="Label" parent="othr_containers/settings_pan/GridContainer"]
layout_mode = 2
text = "Movement highlight"

[node name="movement_btn" type="OptionButton" parent="othr_containers/settings_pan/GridContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "On"
popup/item_0/id = 1
popup/item_1/text = "Off"
popup/item_1/id = 0

[node name="username_lbl" type="Label" parent="othr_containers/settings_pan/GridContainer"]
layout_mode = 2
text = "Username"

[node name="username_lnd" type="LineEdit" parent="othr_containers/settings_pan/GridContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
placeholder_text = "Vigitilus"

[node name="server_ip_lbl" type="Label" parent="othr_containers/settings_pan/GridContainer"]
layout_mode = 2
text = "Online Server IP"

[node name="server_ip_lnd" type="LineEdit" parent="othr_containers/settings_pan/GridContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "192.168.0.10"

[node name="rules_pan" type="Panel" parent="othr_containers"]
visible = false
layout_mode = 0
offset_left = -406.0
offset_top = -227.0
offset_right = 26.0
offset_bottom = 224.0
script = ExtResource("6_f7ts8")

[node name="rules" type="Control" parent="othr_containers/rules_pan"]
layout_mode = 2
anchors_preset = 0
offset_left = -106.0
offset_top = 19.0
offset_right = -58.0
offset_bottom = 50.0

[node name="rule_1" type="Panel" parent="othr_containers/rules_pan/rules"]
layout_mode = 0
offset_left = 109.0
offset_top = -8.0
offset_right = 533.0
offset_bottom = 368.0

[node name="RichTextLabel" type="RichTextLabel" parent="othr_containers/rules_pan/rules/rule_1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Lantruculi is an anctient roman game that most likely evolved from the greek game Petteia, which is similar, but excludes the Dux.
No complete rulebook has come down to us, so every ruleset is an interpretation on how it could be played, based on snippets about the game that ancient historians wrote about.
There are many ways to play it: from multiple rows of soldiers, to placing the units on the board before starting the game.
There are three game rulesets implemented:

- Basic: simplest
- Basic Plus: simplest + capture units in corners
- Latrunculi XXI: complex rules for high level gameplay"

[node name="rule_2" type="Panel" parent="othr_containers/rules_pan/rules"]
visible = false
layout_mode = 0
offset_left = 109.0
offset_top = -8.0
offset_right = 533.0
offset_bottom = 368.0

[node name="Label" type="Label" parent="othr_containers/rules_pan/rules/rule_2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.5
offset_right = 20.5
offset_bottom = 23.0
grow_horizontal = 2
text = "Basic"

[node name="RichTextLabel" type="RichTextLabel" parent="othr_containers/rules_pan/rules/rule_2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 40.0
grow_horizontal = 2
grow_vertical = 2
text = "As the name suggest, its the most basic set.
In Lantrunculi, you win if your opponent has no more pawns except the dux, or if the dux cannot move.
You cannot capture (eat) the dux, which you can use to your advantage.
To eat an enemy pawn, you move it orthogonally any number of squares, and then block the enemy pawn in a custodial attack, which means the opponents pawn is between two of yours.
However, if the opponent moves the pawn between two of your pawns, it does not count as a capture."

[node name="rule_3" type="Panel" parent="othr_containers/rules_pan/rules"]
visible = false
layout_mode = 0
offset_left = 109.0
offset_top = -8.0
offset_right = 533.0
offset_bottom = 368.0

[node name="Label" type="Label" parent="othr_containers/rules_pan/rules/rule_3"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -38.5
offset_right = 38.5
offset_bottom = 23.0
grow_horizontal = 2
text = "Basic Plus"

[node name="RichTextLabel" type="RichTextLabel" parent="othr_containers/rules_pan/rules/rule_3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 40.0
offset_bottom = -136.0
grow_horizontal = 2
grow_vertical = 2
text = "The same rules from the basic set apply here, with the addition that you can capture an opponents pawn, if it stands in the corner.
Do to its location you cannot capture it orthogonally, so the capture takes place if the pawn has no tile to move to.
The top left and bottom right blue pawns would get captured.
"

[node name="Rule1" type="Sprite2D" parent="othr_containers/rules_pan/rules/rule_3"]
position = Vector2(219, 288)
scale = Vector2(0.495356, 0.495356)
texture = ExtResource("7_81su3")

[node name="rule_4" type="Panel" parent="othr_containers/rules_pan/rules"]
visible = false
layout_mode = 0
offset_left = 109.0
offset_top = -8.0
offset_right = 533.0
offset_bottom = 368.0

[node name="Label" type="Label" parent="othr_containers/rules_pan/rules/rule_4"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -38.5
offset_right = 38.5
offset_bottom = 23.0
grow_horizontal = 2
text = "Latrunculi XXI"

[node name="RichTextLabel" type="RichTextLabel" parent="othr_containers/rules_pan/rules/rule_4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 40.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
text = "Latrunculi XXI is an advanced variation of the game, designed by Jose Manuel Carrillo-Muniz in 2015.
In the Basic Lantrunculi rules you cannot force a win on an opponent, and the game can drag on if noone of the players make a serious mistake.

Capturing rules from Basic Plus apply here too, with additional rules, to force any opponents turle position.

In addition, there are new rules on how a pawn can move."

[node name="rule_5" type="Panel" parent="othr_containers/rules_pan/rules"]
visible = false
layout_mode = 0
offset_left = 109.0
offset_top = -8.0
offset_right = 533.0
offset_bottom = 368.0

[node name="Label" type="Label" parent="othr_containers/rules_pan/rules/rule_5"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -38.5
offset_right = 38.5
offset_bottom = 23.0
grow_horizontal = 2
text = "Latrunculi XXI - Movement"

[node name="RichTextLabel" type="RichTextLabel" parent="othr_containers/rules_pan/rules/rule_5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 40.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
text = "Pieces can move freely (they cannot jump other units), if they are not in a skirmish.
A skirmish is define as two oposing pieces being next to eachother. If there are more than two pieces together, its a melee.
A piece in a skirmish can only move if it performs an offensive move: to capture another piece, or to flank an opponents dux.
A piece in a skirmish can only move freely, if the opponents piece has other of your pieces around it.
The dux has special movement rules."

[node name="rule_6" type="Panel" parent="othr_containers/rules_pan/rules"]
visible = false
layout_mode = 0
offset_left = 109.0
offset_top = -8.0
offset_right = 533.0
offset_bottom = 368.0

[node name="Label" type="Label" parent="othr_containers/rules_pan/rules/rule_6"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -38.5
offset_right = 38.5
offset_bottom = 23.0
grow_horizontal = 2
text = "Latrunculi XXI - Movement"

[node name="RichTextLabel" type="RichTextLabel" parent="othr_containers/rules_pan/rules/rule_6"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 40.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
text = "If a dux is in a skirmish, it can move offensively, or move by just ONE tile.
If the dux has two adjacent opponent units, it can only move offensively. If the dux is on the border tile, it cannot move.
If the dux has three adjacent opponet pawns, it cannot move.
If it has four, game over."

[node name="rule_7" type="Panel" parent="othr_containers/rules_pan/rules"]
visible = false
layout_mode = 0
offset_left = 109.0
offset_top = -8.0
offset_right = 533.0
offset_bottom = 368.0

[node name="Label" type="Label" parent="othr_containers/rules_pan/rules/rule_7"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -38.5
offset_right = 38.5
offset_bottom = 23.0
grow_horizontal = 2
text = "Latrunculi XXI - Offensive movement"

[node name="RichTextLabel" type="RichTextLabel" parent="othr_containers/rules_pan/rules/rule_7"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 40.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
text = "An offensive movement is one that places the piece next to a dux, or one that captures another piece.

There are several ways you can capture a unit, other than the two in the Basic and Basic Plus rules.

There are:
- push and crush
- flank attack
- phalanx"

[node name="rule_8" type="Panel" parent="othr_containers/rules_pan/rules"]
visible = false
layout_mode = 0
offset_left = 109.0
offset_top = -8.0
offset_right = 533.0
offset_bottom = 368.0

[node name="Label" type="Label" parent="othr_containers/rules_pan/rules/rule_8"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -38.5
offset_right = 38.5
offset_bottom = 23.0
grow_horizontal = 2
text = "Latrunculi XXI - Offensive movement - Push and crush"

[node name="RichTextLabel" type="RichTextLabel" parent="othr_containers/rules_pan/rules/rule_8"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 40.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
text = "This offensive movement is defined by your piece \"pushing\" a friendly piece and \"crushing\" a opponents piece against another of your pieces, or the border of the game board.The movement of the piece that will be pushing, must be in the same line as the unit its crushing."

[node name="Rule2" type="Sprite2D" parent="othr_containers/rules_pan/rules/rule_8"]
position = Vector2(219, 264)
scale = Vector2(0.643963, 0.643963)
texture = ExtResource("8_d1j5c")

[node name="Cross" parent="othr_containers/rules_pan/rules/rule_8/Rule2" instance=ExtResource("9_pmi7g")]
position = Vector2(80.75, 59.0096)

[node name="Cross2" parent="othr_containers/rules_pan/rules/rule_8/Rule2" instance=ExtResource("9_pmi7g")]
position = Vector2(-159.947, -21.7404)

[node name="Arrow" parent="othr_containers/rules_pan/rules/rule_8/Rule2" instance=ExtResource("10_sk04l")]
position = Vector2(-90.0673, 59.0096)

[node name="Arrow2" parent="othr_containers/rules_pan/rules/rule_8/Rule2" instance=ExtResource("10_sk04l")]
position = Vector2(49.6924, -12.4231)
rotation = -3.14159

[node name="rule_9" type="Panel" parent="othr_containers/rules_pan/rules"]
visible = false
layout_mode = 0
offset_left = 109.0
offset_top = -8.0
offset_right = 533.0
offset_bottom = 368.0

[node name="Label" type="Label" parent="othr_containers/rules_pan/rules/rule_9"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -38.5
offset_right = 38.5
offset_bottom = 23.0
grow_horizontal = 2
text = "Latrunculi XXI - Offensive movement - Flank attack"

[node name="RichTextLabel" type="RichTextLabel" parent="othr_containers/rules_pan/rules/rule_9"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 40.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
text = "This offensive movement is defined by your piece moving next to the last piece in an opponents linear defensive line. This will lead to the capture of the opponents piece. The defensive line can be any pieces long, as long as there is one of your pieces on the other end. The attack movement has to be in the same line as the defensive line."

[node name="Rule2" type="Sprite2D" parent="othr_containers/rules_pan/rules/rule_9"]
position = Vector2(331, 282)
scale = Vector2(0.544892, 0.544892)
texture = ExtResource("11_pmi7g")

[node name="Cross2" parent="othr_containers/rules_pan/rules/rule_9/Rule2" instance=ExtResource("9_pmi7g")]
position = Vector2(-40.3749, -23.2933)

[node name="Arrow2" parent="othr_containers/rules_pan/rules/rule_9/Rule2" instance=ExtResource("10_sk04l")]
position = Vector2(136.654, -12.4231)
rotation = -3.14159

[node name="rule_10" type="Panel" parent="othr_containers/rules_pan/rules"]
visible = false
layout_mode = 0
offset_left = 109.0
offset_top = -8.0
offset_right = 533.0
offset_bottom = 368.0

[node name="Label" type="Label" parent="othr_containers/rules_pan/rules/rule_10"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -38.5
offset_right = 38.5
offset_bottom = 23.0
grow_horizontal = 2
text = "Latrunculi XXI - Offensive movement - Phalanx"

[node name="RichTextLabel" type="RichTextLabel" parent="othr_containers/rules_pan/rules/rule_10"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 40.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
text = "This offensive movement is defined by your piece - the Phalanx, moving to complete a Testuto defense position. A Testudo position is any size rectangular group of pieces. This move captures the opponents piece on the other side of the testudo. Your piece has to move in the same line as the opponents piece."

[node name="Rule2" type="Sprite2D" parent="othr_containers/rules_pan/rules/rule_10"]
position = Vector2(203, 275)
scale = Vector2(0.594427, 0.594427)
texture = ExtResource("12_sk04l")

[node name="Cross2" parent="othr_containers/rules_pan/rules/rule_10/Rule2" instance=ExtResource("9_pmi7g")]
position = Vector2(1.14441e-05, -21.8698)

[node name="Cross3" parent="othr_containers/rules_pan/rules/rule_10/Rule2" instance=ExtResource("9_pmi7g")]
position = Vector2(80.75, 18.5052)

[node name="Arrow2" parent="othr_containers/rules_pan/rules/rule_10/Rule2" instance=ExtResource("10_sk04l")]
position = Vector2(104.302, -149.724)
rotation = -4.71238

[node name="Arrow3" parent="othr_containers/rules_pan/rules/rule_10/Rule2" instance=ExtResource("10_sk04l")]
position = Vector2(15.1406, 153.089)
rotation = -1.57079

[node name="GridContainer" type="GridContainer" parent="othr_containers/rules_pan"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -53.0
grow_horizontal = 2
grow_vertical = 0
columns = 2

[node name="previous_btn" type="Button" parent="othr_containers/rules_pan/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Previous"

[node name="next_btn" type="Button" parent="othr_containers/rules_pan/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Next"

[node name="campaign_pan" type="Panel" parent="othr_containers"]
visible = false
layout_mode = 0
offset_left = -384.0
offset_top = -216.0
offset_bottom = 208.0

[node name="map" type="Sprite2D" parent="othr_containers/campaign_pan"]
position = Vector2(190, 120)
scale = Vector2(0.22695, 0.22695)
texture = ExtResource("13_11cdn")

[node name="VBoxContainer" type="VBoxContainer" parent="othr_containers/campaign_pan"]
layout_mode = 0
offset_left = 22.0
offset_top = 240.0
offset_right = 358.0
offset_bottom = 408.0

[node name="punic_btn" type="Button" parent="othr_containers/campaign_pan/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Punic Wars"

[node name="galic_btn" type="Button" parent="othr_containers/campaign_pan/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Galic Campaign"

[node name="civil_war_btn" type="Button" parent="othr_containers/campaign_pan/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Civil War"

[node name="greco_persian_btn2" type="Button" parent="othr_containers/campaign_pan/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Greco Persian Wars"

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(-1, 4)
scale = Vector2(0.554688, 0.554688)
texture = ExtResource("5_oic2i")

[connection signal="pressed" from="main_container/top_buttons/top_btns/continue_btn" to="main_container/top_buttons/top_btns" method="_on_continue_btn_pressed"]
[connection signal="pressed" from="main_container/top_buttons/top_btns/new_game_btn" to="main_container/top_buttons/top_btns" method="_on_new_game_btn_pressed"]
[connection signal="pressed" from="main_container/top_buttons/top_btns/campaign_btn" to="main_container/top_buttons/top_btns" method="_on_button_pressed"]
[connection signal="pressed" from="main_container/top_buttons/bottom_btns/game_rules_btn" to="main_container/top_buttons/bottom_btns" method="_on_game_rules_btn_pressed"]
[connection signal="pressed" from="main_container/top_buttons/bottom_btns/settings_btn" to="main_container/top_buttons/bottom_btns" method="_on_settings_btn_pressed"]
[connection signal="pressed" from="main_container/top_buttons/bottom_btns/exit_btn" to="main_container/top_buttons/bottom_btns" method="_on_exit_btn_pressed"]
[connection signal="item_selected" from="othr_containers/new_game_pan/game_type_btn" to="othr_containers/new_game_pan" method="_on_game_type_btn_item_selected"]
[connection signal="pressed" from="othr_containers/new_game_pan/start_g_btn" to="othr_containers/new_game_pan" method="_on_start_g_btn_pressed"]
[connection signal="item_selected" from="othr_containers/settings_pan/GridContainer/animation_btn" to="othr_containers/settings_pan" method="_on_animation_btn_item_selected"]
[connection signal="item_selected" from="othr_containers/settings_pan/GridContainer/movement_btn" to="othr_containers/settings_pan" method="_on_movement_btn_item_selected"]
[connection signal="pressed" from="othr_containers/rules_pan/GridContainer/previous_btn" to="othr_containers/rules_pan" method="_on_previous_btn_pressed"]
[connection signal="pressed" from="othr_containers/rules_pan/GridContainer/next_btn" to="othr_containers/rules_pan" method="_on_next_btn_pressed"]
